Finally fixed content overflow issues
README updated to reflect that we don't want people using dev yet

--- a/Code/css/global.css
+++ b/Code/css/global.css
@@ -507,7 +507,9 @@ body > div > form {       /*Has the ID of 'content'*/
   visibility: hidden!important;
 }
 
-
+.pre_var_dump {
+    white-space: pre-wrap;
+}
 
 
 /*  $NO-JS
